--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Random Quote Generator</h1>
+        <h1>Branham Quotes</h1>
         <div class="quote-box">
             <p id="quote">Click here to generate</p>
             <h4 id="author"></h4>
